[tool.poetry]
name = "amass-toolkit"
version = "0.1.0"
description = ""
authors = ["Connor Hainje <cmhainje@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
astropy = "^6.1.3"
scipy = "^1.14.1"
h5py = "^3.11.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"

[virtualenvs]
in-project = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
